compile_log.txt
Listing 'backend'...
Listing 'backend\\.venv'...
Listing 'backend\\.venv\\Include'...
Listing 'backend\\.venv\\Lib'...
Listing 'backend\\.venv\\Lib\\site-packages'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_internal'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_internal\\cli'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_internal\\commands'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_internal\\distributions'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_internal\\index'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_internal\\locations'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_internal\\metadata'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_internal\\metadata\\importlib'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_internal\\models'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_internal\\network'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_internal\\operations'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_internal\\operations\\build'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_internal\\operations\\install'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_internal\\req'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_internal\\resolution'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_internal\\resolution\\legacy'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_internal\\resolution\\resolvelib'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_internal\\utils'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_internal\\vcs'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor\\cachecontrol'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor\\cachecontrol\\caches'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor\\certifi'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor\\dependency_groups'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor\\distlib'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor\\distro'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor\\idna'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor\\msgpack'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor\\packaging'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor\\packaging\\licenses'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor\\pkg_resources'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor\\platformdirs'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor\\pygments'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor\\pygments\\filters'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor\\pygments\\formatters'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor\\pygments\\lexers'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor\\pygments\\styles'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor\\pyproject_hooks'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor\\pyproject_hooks\\_in_process'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor\\requests'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor\\resolvelib'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor\\resolvelib\\resolvers'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor\\rich'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor\\tomli'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor\\tomli_w'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor\\truststore'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor\\urllib3'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor\\urllib3\\contrib'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor\\urllib3\\contrib\\_securetransport'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor\\urllib3\\packages'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor\\urllib3\\packages\\backports'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip\\_vendor\\urllib3\\util'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip-25.2.dist-info'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip-25.2.dist-info\\licenses'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip-25.2.dist-info\\licenses\\src'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip-25.2.dist-info\\licenses\\src\\pip'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip-25.2.dist-info\\licenses\\src\\pip\\_vendor'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip-25.2.dist-info\\licenses\\src\\pip\\_vendor\\cachecontrol'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip-25.2.dist-info\\licenses\\src\\pip\\_vendor\\certifi'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip-25.2.dist-info\\licenses\\src\\pip\\_vendor\\dependency_groups'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip-25.2.dist-info\\licenses\\src\\pip\\_vendor\\distlib'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip-25.2.dist-info\\licenses\\src\\pip\\_vendor\\distro'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip-25.2.dist-info\\licenses\\src\\pip\\_vendor\\idna'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip-25.2.dist-info\\licenses\\src\\pip\\_vendor\\msgpack'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip-25.2.dist-info\\licenses\\src\\pip\\_vendor\\packaging'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip-25.2.dist-info\\licenses\\src\\pip\\_vendor\\pkg_resources'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip-25.2.dist-info\\licenses\\src\\pip\\_vendor\\platformdirs'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip-25.2.dist-info\\licenses\\src\\pip\\_vendor\\pygments'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip-25.2.dist-info\\licenses\\src\\pip\\_vendor\\pyproject_hooks'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip-25.2.dist-info\\licenses\\src\\pip\\_vendor\\requests'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip-25.2.dist-info\\licenses\\src\\pip\\_vendor\\resolvelib'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip-25.2.dist-info\\licenses\\src\\pip\\_vendor\\rich'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip-25.2.dist-info\\licenses\\src\\pip\\_vendor\\tomli'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip-25.2.dist-info\\licenses\\src\\pip\\_vendor\\tomli_w'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip-25.2.dist-info\\licenses\\src\\pip\\_vendor\\truststore'...
Listing 'backend\\.venv\\Lib\\site-packages\\pip-25.2.dist-info\\licenses\\src\\pip\\_vendor\\urllib3'...
Listing 'backend\\.venv\\Scripts'...
Listing 'backend\\agents'...
Listing 'backend\\api'...
Listing 'backend\\benchmarks'...
Listing 'backend\\config'...
Listing 'backend\\core'...
Listing 'backend\\core\\brain'...
Listing 'backend\\core\\cmp'...
Listing 'backend\\data'...
Listing 'backend\\domain'...
Listing 'backend\\knowledge'...
Listing 'backend\\knowledge\\engineering'...
Listing 'backend\\llm'...
Listing 'backend\\maintenance'...
Listing 'backend\\middleware'...
Listing 'backend\\models'...
Listing 'backend\\routes'...
Compiling 'backend\\routes\\projects.py'...
***   File "backend\routes\projects.py", line 196
    ```
    ^
SyntaxError: invalid syntax

Listing 'backend\\scripts'...
Listing 'backend\\security'...
Listing 'backend\\services'...
Listing 'backend\\services\\daena_tools'...
Listing 'backend\\templates'...
Listing 'backend\\tools'...
Listing 'backend\\tools\\executors'...
Listing 'backend\\utils'...
